# breakpad-client-android

./: README.md  copy-lib.sh  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/payneteasy/breakpadclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  breakpad-client.cpp
app/src/main/java/com/payneteasy/breakpadclient/: BreakpadClient.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/payneteasy/breakpadclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
